Adjustments on model manupulation